# dissidentia

./: .gitignore  README.md  activate.sh  pyproject.toml  pytest.ini
data/: annotation_guidelines.md  labels_v1.csv  labels_v2.csv  labels_v3.csv  labels_v4.csv
data/models/: _dummy_model.pkl  baselineModel.pkl
dissidentia/application/: app.py  home_page.py  results_page.py  train.py
dissidentia/domain/: baseline_model.py  bert_model.py  model_wrapper.py  sklearn_bert_wrapper.py
dissidentia/infrastructure/: dataset.py  doccano.py  grand_debat.py  sentencizer.py
notebooks/: Roc_pr_curves.ipynb  annotation.ipynb  baseline_transfer_learning.ipynb  dataset.csv  giskard_scan_report.html  test_giskard.ipynb  train_gcolab.ipynb
test/: lime.ipynb  nlpexplainer.py  test_camenbert_sklearn_wraper.py  test_domain.py  test_infrastructure.py  test_optimize_baseline.py
