[tool.poetry]
name = "dissidentia"
version = "0.1.0"
description = "Detect political dissidents from the answers of the Grand Débat"
authors = ["Amir, Moindzé, Charles"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
nltk = "^3.7"
streamlit = "^1.0"
wget = "^3.2"
scikit-learn = "^1.1.3"
transformers = "^4.24.0"
datasets = "^2.7.0"
black = "^22.10.0"
jupyter = "^1.0.0"
lime = "^0.2.0.1"
poethepoet = "^0.16.4"

torch = {version="^1.11.0"}
torchvision = {version="^0.12.0"}
torchaudio = {version="^0.11.0"}
pytest = "^7.2.0"
plotly = "^5.11.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
